<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/budgetViewLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.BudgetFetchActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <FrameLayout
            android:id="@+id/frameLayout"
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:background="@drawable/layout_bg">

            <ImageButton
                android:id="@+id/ibBack"
                android:layout_width="58dp"
                android:layout_height="65dp"
                android:backgroundTint="@android:color/transparent"
                android:contentDescription="@string/btn_back"
                android:scaleType="centerCrop"
                android:translationX="5dp"
                android:translationY="7dp"
                app:srcCompat="@drawable/backbtn"
                tools:ignore="SpeakableTextPresentCheck,RedundantDescriptionCheck" />

            <TextView
                android:id="@+id/tvFullAmount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/budget"
                android:textColor="@color/white"
                android:textSize="34sp"
                android:textStyle="bold"
                android:translationX="150dp"
                android:translationY="15dp" />

        </FrameLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/etSearch"
                android:layout_width="300dp"
                android:layout_height="48dp"
                android:layout_marginStart="40dp"
                android:layout_marginTop="10dp"
                android:autofillHints=""
                android:background="@drawable/search_bg"
                android:hint="@string/project_name"
                android:inputType="textPersonName"
                android:textColorHint="#82B1FF"
                tools:ignore="DuplicateSpeakableTextCheck" />

            <ImageView
                android:id="@+id/ivSearchIcon"
                android:layout_width="40dp"
                android:layout_height="48dp"
                android:layout_gravity="center"
                android:layout_marginStart="5dp"
                android:layout_marginTop="5dp"
                android:background="@drawable/search_bg"
                android:contentDescription="@string/search_et"
                app:srcCompat="@drawable/search" />
        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvBudgets"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="1dp"
            android:layout_marginTop="1dp"
            android:layout_marginEnd="1dp"
            android:layout_marginBottom="1dp"
            tools:listitem="@layout/budget_list_item">

        </androidx.recyclerview.widget.RecyclerView>

        <TextView
            android:id="@+id/tvLoadingData"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/loading_data"
            android:textColor="@color/black"
            android:textSize="28sp"
            android:textStyle="bold"
            android:visibility="gone" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>